--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@popperjs/core": "^2.11.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "daisyui": "^2.15.1",
     "firebase": "^9.8.2",
+    "focus-trap-react": "^8.11.2",
     "react": "^18.1.0",
+    "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.3",
+    "react-popper": "^2.3.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
